#7 Changed RideType constants to upper case. Also fixed passing ride type from html

--- a/src/main/resources/static/rides.html
+++ b/src/main/resources/static/rides.html
@@ -36,7 +36,7 @@
         let div = document.getElementById(rideType);
         let date = div.getElementsByName("date")[0].value;
         let distance = div.getElementsByName("distance")[0].value;
-        let type = rideType.charAt(0).toUpperCase() + rideType.slice(1);
+        let type = rideType.toUpperCase();
 
         sendApiRequest(date, distance, type);
     }
